# movie-genre-classification

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
conf/training_arguments/: cloud.yaml  local.yaml
data/: wiki_movie_plots_deduped.csv.dvc
mlflow-tracking-server/: Dockerfile  compose.yaml
movie_genre_classification/: data_loader.py  encode_genres.py  genre_classifier.py  genre_encoder.py  load_and_split.py  load_and_split_dataset.py  preprocess.py  preprocess_data.py  preprocessor.py  train.py
movie_genre_classification/lib/: __init__.py
movie_genre_classification/lib/csv_helpers/: __init__.py  csv_helpers.py
movie_genre_classification/lib/metrics/: multi_label_metrics.py
movie_genre_classification/mlflow_loader/: __init__.py
triton-inference-server/distilbert/: Dockerfile  docker-compose.yaml
triton-inference-server/distilbert/model-repository/distilbert/: config.pbtxt
triton-inference-server/distilbert/model-repository/ensemble/: config.pbtxt
triton-inference-server/distilbert/model-repository/tokenizer/: config.pbtxt
triton-inference-server/distilbert/model-repository/tokenizer/1/: model.py
triton-inference-server/http_client/: client.py
