[tool.poetry]
name = "movie-genre-classification"
version = "0.1.0"
description = "Movie genre classification from description"
authors = ["Pavel Kurach <pavel.kurach.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
transformers = {extras = ["torch"], version = "^4.35.2"}
datasets = "^2.15.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
                        
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
src_paths = ["mlproject"]
profile = "black"
line_length = 79
lines_after_imports = 2